[package]
name = "ydb-grpc-bindings"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
keywords = ["database","db","ydb"]
description = "Rust grpc bindings for YDB (unofficial)"
repository = "https://github.com/bool-rus/ydb-grpc-bindings"

[lib]
doctest = false 

[dependencies]
tonic = { versoin = "0.9", features = ["tls-roots"] }
prost = "0.11.2"

[build-dependencies]
tonic-build = "0.9"
